porfolio and prices sections completed

--- a/src/index.html
+++ b/src/index.html
@@ -170,8 +170,8 @@
 
     <section class="resume">
         <div class="container">
-            <h2 class="title title_fz16 resume__title">Опыт</h2>
-            <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
+            <h2 class="title title_fz16 title__section-title">Опыт</h2>
+            <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
 
             <div class="resume__wrapper">
@@ -242,8 +242,8 @@
 
     <section class="skills">
         <div class="container">
-            <h2 class="title title_fz16 skills__title">Навыки</h2>
-            <div class="title title_fz36 skills__subtitle">Что я использую в работе</div>
+            <h2 class="title title_fz16 title__section-title">Навыки</h2>
+            <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
             <div class="divider"></div>
     
             <div class="skills__wrapper">
@@ -347,6 +347,74 @@
                     <div class="progress-item__line">
                         <div class="progress-item__level" style="width: 95%"></div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Портфолио</h2>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
+            <div class="divider"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="pulse">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="bread">
+                </a>
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/works/plans.jpg" alt="plans">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/ipad.jpg" alt="ipad">
+                </a>
+                <a href="#" class="portfolio__item horizonal">
+                    <img src="img/works/mac.jpg" alt="mac">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="prices">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Прайс - лист</h2>
+            <div class="divider"></div>
+            <div class="prices__wrapper">
+                <div class="prices__item">
+                    <div class="prices__header">Landing-page</div>
+                    <div class="prices__price">от 8000 руб.</div>
+                    <div class="prices__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Web-приложение</div>
+                    <div class="prices__price">от 28000 руб.</div>
+                    <div class="prices__descr">Приложение внутри браузера для лучшего комфорта</div>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Корпоративный сайт</div>
+                    <div class="prices__price">от 20000 руб.</div>
+                    <div class="prices__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Android/IOS Приложение</div>
+                    <div class="prices__price">от 25000 руб.</div>
+                    <div class="prices__descr">Приложение для смартфона любой ОС</div>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Интернет-магазин</div>
+                    <div class="prices__price">от 30000 руб.</div>
+                    <div class="prices__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Дизайн</div>
+                    <div class="prices__price">Индивидуально</div>
+                    <div class="prices__descr">Создам дизайн для вашего сайта/приложения...</div>
                 </div>
             </div>
         </div>
